Update concurrency test configuration: change logging package name, enable test profile, and optimize thread management